--- a/sections/storyteller-image-banner.liquid
+++ b/sections/storyteller-image-banner.liquid
@@ -77,7 +77,7 @@
   <div class="banner__content banner__content--{{ section.settings.desktop_content_position }} page-width{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
     <div class="banner__box content-container content-container--full-width-mobile color-{{ section.settings.color_scheme }} gradient">
       {%- for block in section.blocks -%}
-        {% comment %} {%- case block.type -%}
+        {%- case block.type -%}
           {%- when 'heading' -%}
             <h2
               class="banner__heading inline-richtext {{ block.settings.heading_size }}"
@@ -119,7 +119,7 @@
                 </a>
               {%- endif -%}
             </div>
-        {%- endcase -%} {% endcomment %}
+        {%- endcase -%}
         {% section 'featured-product' %}
       {%- endfor -%}
     </div>
@@ -128,7 +128,7 @@
 
 {% schema %}
 {
-  "name": "Storyteller image banner",
+  "name": "storyteller-image-banner",
   "tag": "section",
   "class": "section",
   "disabled_on": {
