--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,6 +49,11 @@
       {{ body_font_italic | font_face: font_display: 'swap' }}
       {{ body_font_bold_italic | font_face: font_display: 'swap' }}
       {{ settings.type_header_font | font_face: font_display: 'swap' }}
+      /* Custom storyteller blog font */
+      {{ settings.type_blog_font | font_face: font_display: 'swap' }}
+      {{ blog_font_bold | font_face: font_display: 'swap' }}
+      {{ blog_font_italic | font_face: font_display: 'swap' }}
+      {{ blog_font_bold_italic | font_face: font_display: 'swap' }}
 
       {% for scheme in settings.color_schemes -%}
         {% assign scheme_classes = scheme_classes | append: ', .color-' | append: scheme.id %}
@@ -100,6 +105,10 @@
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
+
+        /* Custom storyteller blog font */
+        --font-blog-family: {{ settings.type_blog_font.family }};
+        --font-blog-scale: {{ settings.blog_scale | divided_by: 100.0 }};
 
         --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
         --font-heading-style: {{ settings.type_header_font.style }};
@@ -216,6 +225,9 @@
         --variant-pills-shadow-horizontal-offset: {{ settings.variant_pills_shadow_horizontal_offset }}px;
         --variant-pills-shadow-vertical-offset: {{ settings.variant_pills_shadow_vertical_offset }}px;
         --variant-pills-shadow-blur-radius: {{ settings.variant_pills_shadow_blur }}px;
+
+        /* Custom storyteller elements */
+        --background-texture: {% if settings.background_texture %}url("{{ settings.background_texture | img_url: 'master' }}"){% else %}none{% endif %};
       }
 
       *,
