--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -7,12 +7,13 @@
 
 {%- style -%}
   .footer {
-    margin-top: {{ section.settings.margin_top | times: 0.75 | round: 0 }}px;
+    margin-top: 0 !important;
+    /* margin-top: {{ section.settings.margin_top | times: 0.75 | round: 0 }}px; */
   }
 
   .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+    padding-top: {{ section.settings.padding_top | times: 1 | round: 0 }}px;
+    padding-bottom: {{ section.settings.padding_bottom | times: 1 | round: 0 }}px;
   }
 
   @media screen and (min-width: 750px) {
