--- a/sections/storyteller-blog-post.liquid
+++ b/sections/storyteller-blog-post.liquid
@@ -15,7 +15,7 @@
             {{ block.shopify_attributes }}
           >
             <div
-              class="article-template__hero-{{ block.settings.image_height }} media"
+              class="storyteller-shadow article-template__hero-{{ block.settings.image_height }} media"
               itemprop="image"
               {% comment %} {% if block.settings.image_height == 'adapt' and article.image %}
                 style="padding-bottom: {{ 1 | divided_by: article.image.aspect_ratio | times: 100 }}%;"
@@ -35,8 +35,6 @@
                 src="{{ article.image | image_url: width: 1100 }}"
                 loading="eager"
                 fetchpriority="high"
-                width="{{ article.image.width }}"
-                height="{{ article.image.height }}"
                 alt="{{ article.image.alt | escape }}"
               >
             </div>
@@ -96,12 +94,7 @@
     {%- endcase -%}
   {%- endfor -%}
 
-  <div class="article-template__back element-margin-top center{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-    <a href="{{ blog.url }}" class="article-template__link link animate-arrow">
-      <span class="icon-wrap">{% render 'icon-arrow' %}</span>
-      {{ 'blogs.article.back_to_blog' | t: title: blog.title }}
-    </a>
-  </div>
+
   {%- if blog.comments_enabled? -%}
     <div class="article-template__comment-wrapper background-secondary">
       <div
@@ -136,6 +129,7 @@
                   </footer>
                 </article>
               {%- endfor -%}
+
               {% render 'pagination', paginate: paginate, anchor: anchorId %}
             </div>
           {% endpaginate %}
@@ -286,6 +280,33 @@
       </div>
     </div>
   {%- endif -%}
+
+  <div class="story-grid page-width page-width--narrow{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+
+    <div>
+      <h2 class="h1" style="margin-bottom: 0.5em">Next up &rarr;</h2>
+      {% if blog.next_article %}
+        {% render 'storyteller-blog-card',
+        article: blog.next_article,
+        post-relation: 'Next up:',
+        media_aspect_ratio: 1,
+        show_image: true,
+        flex_image: 1,
+        flex_content: 2,
+        show_date: false,
+        show_author: false,
+        show_excerpt: true
+        %}
+      {% else %}<div class="empty-card color-{{ settings.blog_card_color_scheme }}">
+        <h3>No older stories to read.</h3>
+      </div>{% endif %}
+    </div>
+
+    <div class="page-width page-width--narrow{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+      <a href="{{ blog.url }}" class="link storyteller-text-link">
+        &larr; Back to all stories
+      </a>
+    </div>
 </article>
 
 <script type="application/ld+json">
