--- a/sections/storyteller-image-banner.liquid
+++ b/sections/storyteller-image-banner.liquid
@@ -1,29 +1,7 @@
 {{ 'section-image-banner.css' | asset_url | stylesheet_tag }}
 {{ 'section-storyteller-image-banner.css' | asset_url | stylesheet_tag }}
 {{ 'component-image-with-text.css' | asset_url | stylesheet_tag }}
-
-{%- if section.settings.image_height == 'adapt' and section.settings.image != blank -%}
-  {%- style -%}
-    @media screen and (max-width: 749px) {
-      #Banner-{{ section.id }}::before,
-      #Banner-{{ section.id }} .banner__media::before,
-      #Banner-{{ section.id }}:not(.banner--mobile-bottom) .banner__content::before {
-        padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;
-        content: '';
-        display: block;
-      }
-    }
-
-    @media screen and (min-width: 750px) {
-      #Banner-{{ section.id }}::before,
-      #Banner-{{ section.id }} .banner__media::before {
-        padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;
-        content: '';
-        display: block;
-      }
-    }
-  {%- endstyle -%}
-{%- endif -%}
+<script src="{{ 'parallax.js' | asset_url }}" defer="defer"></script>
 
 {%- style -%}
   #Banner-{{ section.id }}::after {
@@ -50,12 +28,11 @@
 
 <div
   id="Banner-{{ section.id }}"
-  class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
+  class="banner parallax-container banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
 >
   {%- if section.settings.image != blank -%}
-    <div class="banner__media media{% if section.settings.image == blank %} placeholder{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
+    <div class="hidden parallax-image banner__media media{% if section.settings.image == blank %} placeholder{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
       {%- liquid
-        assign image_height = section.settings.image.width | divided_by: section.settings.image.aspect_ratio
         assign sizes = full_width
       -%}
       {{
@@ -63,7 +40,6 @@
         | image_url: width: 3840
         | image_tag:
           width: section.settings.image.width,
-          height: image_height,
           class: image_class,
           sizes: sizes,
           widths: widths,
@@ -73,23 +49,14 @@
   {%- endif -%}
     <div class="banner__content storyteller-image-banner__grid page-width{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
       <div
-        class="image-with-text__media storyteller-image-banner__media--{{ section.settings.height }} global-media-settings background-transparent{% if section.settings.hero_image != blank %} media{% else %} image-with-text__media--placeholder placeholder{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}"
-        style="padding-bottom: {{ 1 | divided_by: section.settings.hero_image.aspect_ratio | times: 100 }}%;"
+        class="image-with-text__media flex-1 storyteller-image-banner__media global-media-settings background-transparent{% if section.settings.hero_image != blank %} media{% else %} image-with-text__media--placeholder placeholder{% endif %} {% if section.settings.round_hero_image == true %}round_hero_image{% endif %}"
       >
         {%- if section.settings.hero_image != blank -%}
-          {% comment %} {%- if section.settings.image_behavior == 'ambient' or section.settings.image_behavior == 'zoom-in' -%}
-            {%- assign widths = '198, 432, 642, 900, 1284, 1800' -%}
-            {%- capture sizes -%}
-          (min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 1.6667 }}px,
-          (min-width: 750px) calc((100vw - 130px) / 1.667), calc((100vw - 50px) / 1.667)
-          {%- endcapture -%} {% endcomment %}
-          {% comment %} {%- else -%} {% endcomment %}
           {%- assign widths = '165, 360, 535, 750, 1070, 1500' -%}
           {%- capture sizes -%}
             (min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px,
-            (min-width: 750px) calc((100vw - 1000px) / 2), calc(100vw - 50px)
+            (min-width: 750px) calc((100vw - 50px) / 2), calc(100vw - 50px)
           {%- endcapture -%}
-          {% comment %} {%- endif -%} {% endcomment %}
           {{
             section.settings.hero_image
             | image_url: width: 1000
@@ -99,7 +66,7 @@
           {{ 'detailed-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
         {%- endif -%}
       </div>
-      <div class="storyteller-image-banner__text-container">
+      <div class="storyteller-image-banner__text-container flex-{{ section.settings.flex_ratio }}">
         <div
           id="ImageWithText--{{ section.id }}"
           class="image-with-text__content image-with-text__content--{{ section.settings.desktop_content_position }} image-with-text__content--desktop-{{ section.settings.desktop_content_alignment }} image-with-text__content--mobile-{{ section.settings.mobile_content_alignment }} image-with-text__content--{{ section.settings.height }} content-container background-transparent"
@@ -121,25 +88,32 @@
                   {{ block.settings.caption | escape }}
                 </p>
               {%- when 'text' -%}
-                <div class="image-with-text__text rte {{ block.settings.text_style }}" {{ block.shopify_attributes }}>
+                <div class="image-with-text__text rte hero-text" {{ block.shopify_attributes }}>
                   {{ block.settings.text }}
                 </div>
-              {%- when 'button' -%}
-                {%- if block.settings.button_label != blank -%}
-                  <a
-                    {% if block.settings.button_link == blank %}
-                      role="link" aria-disabled="true"
-                    {% else %}
-                      href="{{ block.settings.button_link }}"
-                    {% endif %}
-                    class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
-                    {{ block.shopify_attributes }}
-                  >
-                    {{ block.settings.button_label | escape }}
-                  </a>
-                {%- endif -%}
             {%- endcase -%}
           {%- endfor -%}
+
+          <div class="button-holder">
+            {%- for block in section.blocks -%}
+              {% case block.type %}
+                {%- when 'button' -%}
+                  {%- if block.settings.button_label != blank -%}
+                    <a
+                      {% if block.settings.button_link == blank %}
+                        role="link" aria-disabled="true"
+                      {% else %}
+                        href="{{ block.settings.button_link }}"
+                      {% endif %}
+                      class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
+                      {{ block.shopify_attributes }}
+                    >
+                      {{ block.settings.button_label | escape }}
+                    </a>
+                  {%- endif -%}
+                {% endcase %}
+              {% endfor %}
+        </div>
         </div>
       </div>
     </div>
@@ -256,28 +230,30 @@
       "content": "t:sections.all.animation.content"
     },
     {
+      "type": "checkbox",
+      "id": "round_hero_image",
+      "default": false,
+      "label": "Round hero image"
+    },
+    {
       "type": "select",
-      "id": "image_behavior",
+      "id": "flex_ratio",
       "options": [
         {
-          "value": "none",
-          "label": "t:sections.all.animation.image_behavior.options__1.label"
+          "value": "1",
+          "label": "Image 1:1 Content"
         },
         {
-          "value": "ambient",
-          "label": "t:sections.all.animation.image_behavior.options__2.label"
+          "value": "2",
+          "label": "Image 1:2 Content"
         },
         {
-          "value": "fixed",
-          "label": "t:sections.all.animation.image_behavior.options__3.label"
-        },
-        {
-          "value": "zoom-in",
-          "label": "t:sections.all.animation.image_behavior.options__4.label"
+          "value": "3",
+          "label": "Image 1:3 Content"
         }
       ],
-      "default": "none",
-      "label": "t:sections.all.animation.image_behavior.label"
+      "default": "1",
+      "label": "Flex ratio"
     },
     {
       "type": "header",
@@ -572,7 +548,7 @@
     {
       "type": "button",
       "name": "t:sections.image-with-text.blocks.button.name",
-      "limit": 1,
+      "limit": 2,
       "settings": [
         {
           "type": "text",
