--- a/assets/section-storyteller-image-banner.css
+++ b/assets/section-storyteller-image-banner.css
@@ -51,12 +51,13 @@
    width: auto !important;
    height: auto !important;
    max-width: 80vw;
-   max-height: 50vh;
+   max-height: 60vh;
+   margin-inline: auto;
+   border-radius: 8px;
 }
 
 .round_hero_image img {
    border-radius: 50%;
-   margin-inline: auto;
 }
 
 .button-holder {
@@ -67,7 +68,7 @@
 }
 
 .button-holder .button {
-   flex: 1 1 auto;
+   flex: 1 1 0;
 }
 
 .hero-text {
