--- a/snippets/storyteller-media-card.liquid
+++ b/snippets/storyteller-media-card.liquid
@@ -16,42 +16,60 @@
   {% render 'article-card' blog: blog, article: article, show_image: section.settings.show_image %}
 {% endcomment %}
 
+{%  liquid 
+  assign youtube_url = article.metafields.custom.video_url
+  assign parts = youtube_url | split: "/"
+  assign video_id = parts.last
+%}
+
+
 {%- if article and article != empty -%}
-  <div
-    class="
-      article-card blog-card
-      card--{{ settings.blog_card_style }}
-      {% if settings.blog_card_style == 'card' %} color-{{ settings.blog_card_color_scheme }} gradient{% endif %}
-      {% if flex_direction == 'column' %}layout-column{% endif %}
-    "
-  >
-    {%- if show_image == true and article.image -%}
-      <div class="card__image media" {% if flex_image %}style="flex: {{ flex_image }}"{% endif %}>
-        <img
-          srcset="
-            {%- if article.image.src.width >= 165 -%}{{ article.image.src | image_url: width: 165 }} 165w,{%- endif -%}
-            {%- if article.image.src.width >= 360 -%}{{ article.image.src | image_url: width: 360 }} 360w,{%- endif -%}
-            {%- if article.image.src.width >= 533 -%}{{ article.image.src | image_url: width: 533 }} 533w,{%- endif -%}
-            {%- if article.image.src.width >= 720 -%}{{ article.image.src | image_url: width: 720 }} 720w,{%- endif -%}
-            {%- if article.image.src.width >= 1000 -%}{{ article.image.src | image_url: width: 1000 }} 1000w,{%- endif -%}
-            {%- if article.image.src.width >= 1500 -%}{{ article.image.src | image_url: width: 1500 }} 1500w,{%- endif -%}
-            {{ article.image.src | image_url }} {{ article.image.src.width }}w
-          "
-          src="{{ article.image.src | image_url: width: 533 }}"
-          sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"
-          alt="{{ article.image.src.alt | escape }}"
-          class="motion-reduce"
-          {% unless lazy_load == false %}
-            loading="lazy"
-          {% endunless %}
-          width="{{ article.image.width }}"
-          height="{{ article.image.height }}"
-        >
-      </div>
+    <div
+      class="
+        article-card blog-card media-card
+        card--{{ settings.blog_card_style }}
+        {% if settings.blog_card_style == 'card' %} color-{{ settings.blog_card_color_scheme }} gradient{% endif %}
+        {% if flex_direction == 'column' %}layout-column{% endif %}
+      "
+    >
+    {%- if article.metafields.custom.video_url -%}
+    <div class="card__image media">
+      <iframe
+        src="https://www.youtube.com/embed/{{ video_id }}?enablejsapi=1"
+        class="js-youtube"
+        title="{{ article.title }}"
+        allow="autoplay;encrypted-media;" allowfullscreen>
+      </iframe>
+    </div>
+    {%- else %}
+      {% if show_image == true and article.image -%}
+        <div class="card__image media" {% if flex_image %}style="flex: {{ flex_image }}"{% endif %}>
+          <img
+            srcset="
+              {%- if article.image.src.width >= 165 -%}{{ article.image.src | image_url: width: 165 }} 165w,{%- endif -%}
+              {%- if article.image.src.width >= 360 -%}{{ article.image.src | image_url: width: 360 }} 360w,{%- endif -%}
+              {%- if article.image.src.width >= 533 -%}{{ article.image.src | image_url: width: 533 }} 533w,{%- endif -%}
+              {%- if article.image.src.width >= 720 -%}{{ article.image.src | image_url: width: 720 }} 720w,{%- endif -%}
+              {%- if article.image.src.width >= 1000 -%}{{ article.image.src | image_url: width: 1000 }} 1000w,{%- endif -%}
+              {%- if article.image.src.width >= 1500 -%}{{ article.image.src | image_url: width: 1500 }} 1500w,{%- endif -%}
+              {{ article.image.src | image_url }} {{ article.image.src.width }}w
+            "
+            src="{{ article.image.src | image_url: width: 533 }}"
+            sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"
+            alt="{{ article.image.src.alt | escape }}"
+            class="motion-reduce"
+            {% unless lazy_load == false %}
+              loading="lazy"
+            {% endunless %}
+            width="{{ article.image.width }}"
+            height="{{ article.image.height }}"
+          >
+        </div>
+      {% endif %}
     {%- endif -%}
     <div class="card__content" {% if flex_content %}style="flex: {{ flex_content }}"{% endif %}>
       <h3 class="card__heading{% if show_excerpt %} h2{% endif %}">
-        <a href="{{ article.url }}" class="full-unstyled-link">
+        <a href="{{ article.metafields.custom.video_url }}" class="full-unstyled-link">
           {{ article.title | truncate: 50 | escape }}
         </a>
       </h3>
