--- a/snippets/storyteller-media-card.liquid
+++ b/snippets/storyteller-media-card.liquid
@@ -70,7 +70,7 @@
     <div class="card__content" {% if flex_content %}style="flex: {{ flex_content }}"{% endif %}>
       <h3 class="card__heading{% if show_excerpt %} h2{% endif %}">
         <a href="{{ article.metafields.custom.video_url }}" class="full-unstyled-link">
-          {{ article.title | truncate: 50 | escape }}
+          {{ article.title }}
         </a>
       </h3>
       <div class="article-card__info caption-with-letter-spacing h5">
