--- a/sections/storyteller-media.liquid
+++ b/sections/storyteller-media.liquid
@@ -177,7 +177,7 @@
             class="blog__button button"
             aria-labelledby="ViewAll-{{ section.id }} SectionHeading-{{ section.id }}"
           >
-            {{ settings.blog_view_all_text }}
+            {{ section.settings.blog_view_all_text }}
           </a>
         </div>
       {%- endif -%}
